# saffron.project

./: saffron.project.code-workspace
saffron.api/: README.md  pyproject.toml  requirements.txt
saffron.api/app/: main.py
saffron.api/app/api/v1/endpoints/: auth.py  fields.py  files.py  folders.py
saffron.api/app/core/: config.py
saffron.api/app/db/: mongodb.py
saffron.api/app/db/models/: user.py
saffron.api/app/models/: folder_model.py
saffron.api/app/services/: auth_service.py  security.py
saffron.api/app/utils/: json_helpers.py
saffron.api/tests/: test_auth.py  test_folders.py
saffron.ui/: README.md  index.html  package-lock.json  package.json  quasar.config.ts
saffron.ui/public/pdfjs/: index.html  index.js  pdf-cache.js
saffron.ui/src/: App.vue
saffron.ui/src/boot/: axios.ts  directives.ts  i18n.ts  rtl.ts
saffron.ui/src/components/: ColorPickerModal.vue  DashboardContent.vue  FabricPropertiesEditor.vue  FileProperties.vue  FloatToolbar.vue  FolderExplorer.vue  FormsTree.vue  MainEditor.vue  PdfEditor.vue  PropertiesPanel.vue  SideBarLink.vue  UserInfo.vue  models.ts
saffron.ui/src/css/: app.scss
saffron.ui/src/directives/: decimal.ts  format-date.ts
saffron.ui/src/i18n/: index.ts
saffron.ui/src/layouts/: AuthLayout.vue  FormBuilder.vue  PublicLayout.vue
saffron.ui/src/models/: events.ts
saffron.ui/src/pages/: IndexPage.vue  LoginPage.vue  SignupPage.vue
saffron.ui/src/router/: index.ts  routes.ts
saffron.ui/src/stores/: Iframe.ts  annotataion.ts  annotation.ts  auth.ts  folder.ts  index.ts  page.ts  tab.ts  toolbar.ts
(+11 files in other folders)
